# capstone

./: .gitignore  MCInst.c  MCInst.h  Makefile  MathExtras.h  capstone-32.vcxproj.filters  capstone-64.vcxproj.filters  capstone-common.props  cs.c  cs_priv.h  meson.build  meson_options.txt  utils.c
arch/AArch64/: AArch64BaseInfo.c  AArch64BaseInfo.h  AArch64Disassembler.c  AArch64GenAsmWriter.inc  AArch64InstPrinter.c  AArch64Mapping.c  AArch64Module.c
arch/ARM/: ARMDisassembler.c  ARMGenAsmWriter.inc  ARMInstPrinter.c  ARMMapping.c  ARMModule.c
arch/BPF/: BPFMapping.c
arch/EVM/: EVMMapping.c
arch/PowerPC/: PPCGenAsmWriter.inc  PPCGenRegisterName.inc  PPCInstPrinter.c  PPCMapping.c
arch/Sparc/: SparcInstPrinter.c
arch/X86/: X86ATTInstPrinter.c  X86Disassembler.c  X86DisassemblerDecoder.c  X86DisassemblerDecoder.h  X86InstPrinterCommon.c  X86IntelInstPrinter.c  X86Mapping.c  X86Module.c
arch/XCore/: XCoreInstPrinter.c
cstool/: meson.build
include/capstone/: aarch64.h  capstone.h
subprojects/: fadec.wrap
