option('archs',
  type: 'array',
  choices: [
    'all',
    'arm',
    'arm64',
    'bpf',
    'evm',
    'm680x',
    'm68k',
    'mos65xx',
    'mips',
    'powerpc',
    'riscv',
    'sparc',
    'sysz',
    'tms320c64x',
    'wasm',
    'x86',
    'xcore',
  ],
  value: ['all'],
  description: 'Which archs you want to compile in'
)

option('use_sys_dyn_mem',
  type: 'boolean',
  value: true,
  description: 'Use malloc/calloc/realloc/free/vsnprintf() provided by the system for internal memory management'
)

option('diet',
  type: 'boolean',
  value: false,
  yield: true,
  description: 'Make the library more compact: use less memory & smaller in binary size'
)

option('x86_reduce',
  type: 'boolean',
  value: false,
  description: 'Remove non-critical instruction sets of X86, making the binary size smaller by ~60%'
)

option('x86_att_disable',
  type: 'boolean',
  value: false,
  description: 'Disable AT&T syntax on x86 to reduce library size'
)

option('has_osxkernel',
  type: 'boolean',
  value: false,
  description: 'Enable OS X kernel embedding support'
)

option('cli',
  type: 'feature',
  value: 'auto',
  description: 'Build CLI programs (“auto” means they will be built when not a subproject)'
)
